--- a/src/Components/NavLinks.css
+++ b/src/Components/NavLinks.css
@@ -4,15 +4,17 @@
   gap: 25px;
   margin: 0;
   padding: 0;
+  color: #000000
 }
 
 .nav-links li {
   position: relative;
+  border-radius: 15%;
 }
 
 .nav-links li a {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
   font-size: 16px;
   font-weight: 500;
   padding: 10px 15px;
@@ -21,13 +23,12 @@
 }
 
 .nav-links li a:hover {
-  color: #ffffff;
+  color: #000000;
   transform: translateY(-3px);
 }
 
 .nav-links li a.active {
-  background-color: #ff6363;
-  color: #ffffff;
+  color: #000000;
 }
 
 .nav-links li a::after {
@@ -35,7 +36,7 @@
   position: absolute;
   width: 100%;
   height: 3px;
-  background-color: #ff6363;
+  background-color: #63ceff;
   left: 0;
   bottom: -6px;
   transform: scaleX(0);
@@ -49,5 +50,5 @@
 }
 
 .nav-links li a.active:hover {
-    box-shadow: 0 8px 15px rgba(255, 99, 99, 0.2);
+    box-shadow: 0 8px 15px rgba(99, 237, 255, 0.2);
 }
