--- a/src/Components/NavLinks.css
+++ b/src/Components/NavLinks.css
@@ -49,6 +49,6 @@
   transform: scaleX(1);
 }
 
-.nav-links li a.active:hover {
-    box-shadow: 0 8px 15px rgba(99, 237, 255, 0.2);
+.nav-links li a.active:hover::after {
+  background-color: #4086a6;
 }
