run prettier on all files and format home page

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -45,6 +45,8 @@
     background-color: white;
     text-align: center;
     width: 100%;
+    display: flex;
+    justify-content: space-around;
   }
   
   .info-section h2 {
