--- a/src/Pages/Brotherhood.css
+++ b/src/Pages/Brotherhood.css
@@ -1,9 +1,38 @@
-.pageContainer {
-    padding-top: 80px;
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
-    background-color: black;
-    color: aliceblue;
-  }
-  
+.body {
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-track {
+  display: flex;
+  gap: 4vmin;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  width: max-content;
+  padding: 0 2vmin;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+.image-track::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
+
+.image-track > .img {
+  width: 40vmin;
+  height: 56vmin;
+  object-fit: cover;
+  object-position: 100% center;
+}
