--- a/src/Pages/Brotherhood.css
+++ b/src/Pages/Brotherhood.css
@@ -1,3 +1,12 @@
+* {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
 .body {
   height: 100vh;
   width: 100vw;
@@ -20,14 +29,17 @@
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
-  scrollbar-width: none;  /* Firefox */
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  /* Ensure these styles are not overridden */
+  scrollbar-width: none !important;
+  -ms-overflow-style: none !important;
 }
 
-.image-track::-webkit-scrollbar { 
-  display: none;  /* Safari and Chrome */
+.image-track::-webkit-scrollbar {
+  display: none !important;
+  width: 0 !important;
+  height: 0 !important;
 }
 
 .image-track > .img {
