--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -10,7 +10,22 @@
     background-position: center;
     background-repeat: no-repeat;
   }
+  .background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Place the video behind other content */
+  }
   
+  .background-video video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* This ensures the video covers the entire container */
+  }
+
+
   .hero-section {
     display: flex;
     align-items: center;
