--- a/src/Pages/Careers.css
+++ b/src/Pages/Careers.css
@@ -1,9 +1,58 @@
-.pageContainer {
-    padding-top: 80px;
-    background-size: cover;
-    background-position: center;
-    min-height: 100vh;
-    background-color: black;
-    color: aliceblue;
-  }
-  
+.careersmainTitleSection {
+  width: 100%;
+  padding: 50px 20px;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.careersmainTitle {
+  font-size: 65px;
+  font-family: 'Greek Font', sans-serif;
+  color: black;
+  text-align: center;
+  margin: 0;
+}
+
+.careersContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.careerstitleSection {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  color: white;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.6); /* Optional: Adds a dark overlay for better text visibility */
+}
+
+.careersContent {
+  position: relative;
+  z-index: 2;
+}
+
+.careersTitle {
+  font-family: 'Greek Font', sans-serif;
+  font-size: 72px;
+  margin: 0;
+  letter-spacing: 5px;
+}
+
+.careers-subtitle1 {
+  font-family: 'Greek Font', sans-serif;
+  font-size: 24px;
+  margin: 0;
+}
