Added API data fetching

--- a/src/Pages/Careers.css
+++ b/src/Pages/Careers.css
@@ -56,3 +56,10 @@
   font-size: 24px;
   margin: 0;
 }
+
+.careers-section {
+  font-family: 'Greek Font', sans-serif;
+  font-size: 24px;
+  margin: 0;
+  background: white;
+}
