updated video for no AKY logo and put instagram logo on top right, removed unnecessary files

--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -47,7 +47,27 @@
     font-size: 72px;
     margin: 0;
     letter-spacing: 5px;
-  }
+    font-weight: bold;
+    padding: 20px;
+    color: transparent; /* Makes the text color transparent */
+    background: linear-gradient(45deg, #6bff7c, #b300ff, #4db8ff);
+    background-size: 300%;
+    background-clip: text;
+    -webkit-background-clip: text; /* Ensures compatibility with WebKit browsers */
+    animation: gradient-animation 20s infinite; /* Slow gradient animation */
+}
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
   
   .hero-subtitle {
     font-family: 'Greek Font', sans-serif;
