colors made a lil nice and ALL NEWWW brotherhood pageeee

--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -3,7 +3,7 @@
     background-size: cover;
     background-position: center;
     min-height: 100vh;
-    background-color: black;
+    background-color: #121212;
     color: aliceblue;
   }
   
