--- a/src/Components/NavLinks.css
+++ b/src/Components/NavLinks.css
@@ -4,7 +4,7 @@
   gap: 25px;
   margin: 0;
   padding: 0;
-  color: #000000
+  color: #121212
 }
 
 .nav-links li {
@@ -12,9 +12,9 @@
   border-radius: 15%;
 }
 
-.nav-links li a {
+.nav-links li .NavLink {
   text-decoration: none;
-  color: #000000;
+  color: aliceblue;
   font-size: 16px;
   font-weight: 500;
   padding: 10px 15px;
@@ -22,21 +22,21 @@
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.nav-links li a:hover {
-  color: #000000;
+.nav-links li .NavLink:hover {
+  color: aliceblue;
   transform: translateY(-3px);
 }
 
-.nav-links li a.active {
-  color: #000000;
+.nav-links li .NavLink.active {
+  color: aliceblue;
 }
 
-.nav-links li a::after {
+.nav-links li .NavLink::after {
   content: '';
   position: absolute;
   width: 100%;
   height: 3px;
-  background-color: #63ceff;
+  background-color: #302ad6;
   left: 0;
   bottom: -6px;
   transform: scaleX(0);
@@ -44,11 +44,11 @@
   transition: transform 0.3s ease;
 }
 
-.nav-links li a:hover::after,
-.nav-links li a.active::after {
+.nav-links li .NavLink:hover::after,
+.nav-links li .NavLink.active::after {
   transform: scaleX(1);
 }
 
-.nav-links li a.active:hover::after {
-  background-color: #4086a6;
+.nav-links li .NavLink.active:hover::after {
+  background-color: #302ad6;
 }
