--- a/src/Main.css
+++ b/src/Main.css
@@ -5,7 +5,7 @@
   padding: 5px;
   background: transparent; /* Transparent background */
   z-index: 100; /* High z-index to stay on top of all content */
-  position: absolute; /* Fix the position at the top of the viewport */
+  position: absolute!important; /* Fix the position at the top of the viewport */
   top: 0;
   width: 100%; /* Ensure it spans the full width of the viewport */
   box-sizing: border-box; /* Ensure padding is included within the width */
