--- a/src/Pages/Recruitment.css
+++ b/src/Pages/Recruitment.css
@@ -32,7 +32,7 @@
 
 .rushButton {
   background-color: white;
-  color: black;
+  color: 121212;
   padding: 15px 30px;
   font-size: 1rem;
   font-weight: bold;
