--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -2,7 +2,7 @@
     padding-top: 80px;
     background-size: cover;
     background-position: center;
-    min-height: 100vh;
+    min-height: 100%;
     background-color: #121212;
     color: aliceblue;
   }
