--- a/src/Components/NavLinks.css
+++ b/src/Components/NavLinks.css
@@ -10,6 +10,7 @@
 .nav-links li {
   position: relative;
   border-radius: 15%;
+  padding: 5px;
 }
 
 .nav-links li .NavLink {
@@ -17,7 +18,6 @@
   color: aliceblue;
   font-size: 16px;
   font-weight: 500;
-  padding: 10px 15px;
   border-radius: 5px;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
@@ -28,7 +28,7 @@
 }
 
 .nav-links li .NavLink.active {
-  color: aliceblue;
+  color: rgb(255, 255, 255);
 }
 
 .nav-links li .NavLink::after {
@@ -51,4 +51,5 @@
 
 .nav-links li .NavLink.active:hover::after {
   background-color: #302ad6;
+  backdrop-filter: blur(70px);
 }
