--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -68,7 +68,7 @@ html, body {
   -webkit-background-clip: text;
   text-shadow: 
     2px 2px 0px black,
-    4px 4px 0px blue;
+    4px 4px 0px rgb(217, 217, 250);
   animation: gradient-animation 15s infinite;
 }
 
@@ -81,13 +81,13 @@ html, body {
 /* Info section styles */
 .info-section {
   scroll-snap-align: start;
-  padding: 50px 20px;
+  padding: 80px 20px 20px;
   background-color: #121212;
   text-align: center;
   height: 100vh;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   flex-direction: column;
   align-items: center;
   color: #ffffff;
@@ -153,7 +153,6 @@ html, body {
   display: flex;
   gap: 10px;
   margin-top: 20px;
-  flex-direction: column;
 }
 
 .social-links a {
