--- a/src/Components/NavLinks.css
+++ b/src/Components/NavLinks.css
@@ -73,7 +73,8 @@
     top: 60px;
     left: 0;
     right: 0;
-    background-color: #121212;
+    background-color: transparent;
+    backdrop-filter: blur(1rem);
     padding: 1rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   }
