im actually a genius omg

--- a/src/Components/NavLinks.css
+++ b/src/Components/NavLinks.css
@@ -20,6 +20,8 @@
   font-weight: 500;
   border-radius: 5px;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  text-shadow: 1px 1px 2px black;
+
 }
 
 .nav-links li .NavLink:hover {
