--- a/src/Pages/Brotherhood.css
+++ b/src/Pages/Brotherhood.css
@@ -55,6 +55,7 @@ html, body {
 .brotherhood-title {
   color: white;
   font-size: 1.5rem;
+  padding-left: 1rem;
   margin-bottom: 2rem;
   font-family: 'Roboto';
 }
