--- a/src/Pages/Careers.css
+++ b/src/Pages/Careers.css
@@ -79,10 +79,10 @@
 }
 
 .th, .td {
-  border: 1px;
-  min-width: 30rem;
-  padding: 1.5rem;
-  line-height: 1.7;
+  border: 1px solid #dbdbdb;
+  border-width: 0 0 1px;
+  padding: 0.5em 0.75em;
+  vertical-align: top;
 }
 
 .td {
