--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -67,7 +67,7 @@ html, body {
   -webkit-background-clip: text;
   text-shadow: 
     2px 2px 0px black,
-    4px 4px 0px rgb(217, 217, 250);
+    4px 4px 0px rgb(211, 211, 252);
   animation: gradient-animation 15s infinite;
 }
 
@@ -91,7 +91,7 @@ html, body {
   align-items: center;
   color: #ffffff;
   box-sizing: border-box;
-  border: 3px solid aliceblue;
+  border: 3px inset aliceblue;
 }
 
 .info-section h2 {
@@ -117,14 +117,14 @@ html, body {
   width: 100%;
   height: 100vh;
   padding: 20px;
-  background-color: #11111b;
+  background-color: #121212;
   color: #ffffff;
   font-family: Arial, sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: 3px solid aliceblue;
+  border: 3px inset aliceblue;
   box-sizing: border-box;
 }
 
@@ -181,4 +181,41 @@ html, body {
   .info-image {
     width: 50%;
   }
+}
+
+.summary-section {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-bottom: 3rem;
+}
+
+.summary-item {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  gap: 1rem;
+}
+
+.summary-item h2 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.summary-item img {
+  width: 40vmin;
+  height: 40vmin;
+  margin-bottom: 1rem;
+  object-fit: cover;
+}
+
+.summary-item p {
+  margin-bottom: 1rem;
+  font-size: large;
+  display: flex;
+  width: 30vmin;
 }
