--- a/src/Pages/Careers.css
+++ b/src/Pages/Careers.css
@@ -88,3 +88,8 @@
 .td {
   font-size: 1.5rem;
 }
+
+.careersmainTitle{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 25px
+}
