Fixed logo scroll display issue

--- a/src/Pages/CareerLogoScroll.css
+++ b/src/Pages/CareerLogoScroll.css
@@ -56,11 +56,12 @@
   
   .logos-slide {
     display: flex;
+    width: calc(200% + 80px);
     animation: 50s slide linear infinite;
   }
   
   .logos-slide img {
     height: 50px;
-    margin: 0 40px;
+    margin: 0 20px;
   }
   
