--- a/src/Pages/Recruitment.css
+++ b/src/Pages/Recruitment.css
@@ -57,32 +57,58 @@ body, html {
 }
 
 @import url('https://fonts.cdnfonts.com/css/dune-rise');
+
 .mainTitle {
   font-family: 'Dune Rise', sans-serif;
   background: linear-gradient(
-    45deg,
-    rgba(180, 150, 110, 0.9) 0%,
-    rgba(159, 124, 77, 0.9) 25%,
-    rgba(138, 98, 44, 0.9) 50%,
-    rgba(159, 124, 77, 0.9) 75%,
-    rgba(180, 150, 110, 0.9) 100%
-  );
+  45deg,
+  rgba(160, 130, 90, 1) 0%,
+  rgba(139, 104, 57, 1) 25%,
+  rgba(118, 78, 24, 1) 50%,
+  rgba(139, 104, 57, 1) 75%,
+  rgba(160, 130, 90, 1) 100%
+);
   background-size: 200% 200%;
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
-  animation: gradientShift 8s ease infinite;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.14);
   font-size: 6rem;
   margin-bottom: 1rem;
+  animation: glowAnimation 7s ease-in-out;
+}
+
+@keyframes glowAnimation {
+  0% {
+    text-shadow: 0 0 0.33rem rgba(182, 154, 0, 0.7), 0 0 1rem rgba(211, 179, 2, 0.5), 0 0 1rem rgba(161, 137, 0, 0.3);
+  }
+  50% {
+    text-shadow: 0 0 1rem rgba(190, 162, 0, 0.9), 0 0 1rem rgba(255, 215, 0, 0.7), 0 0 2rem rgba(255, 215, 0, 0.5);
+  }
+
+  50% {
+    text-shadow: 0 0 1rem rgba(190, 162, 0, 0.8), 0 0 1rem rgba(255, 215, 0, 0.6), 0 0 2rem rgba(255, 215, 0, 0.4);
+  }
 }
 
 .subTitle {
   font-family: 'Dune Rise', sans-serif;
   font-size: 2rem;
   margin-bottom: 2rem;
-  animation: gradientShift 8s ease infinite;
+  opacity: 0;
+  animation: fadeIn 2s ease-out forwards;
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 
 .eventSection {
   text-align: center;
