--- a/src/Components/RushEventInfo.module.css
+++ b/src/Components/RushEventInfo.module.css
@@ -47,11 +47,12 @@
     font-size: 1.2rem; /* Adjusted icon size for mobile */
 }
 
-/* Optional: Add media queries for further optimization on smaller devices */
+/*Make sure to change the svg color for each rush theme*/
 @media (max-width: 768px) {
     .eventCard {
         width: 90vmin;
-        height: 60vmin;
+        height: 80vmin;
+        align-content: center;
     }
 
     .eventTitle {
@@ -64,5 +65,6 @@
 
     .eventDetail svg {
         font-size: 1rem;
+        color: antiquewhite;
     }
 }
