--- a/src/Pages/MeetUs.css
+++ b/src/Pages/MeetUs.css
@@ -7,11 +7,26 @@
   color: aliceblue;
   display: flex;
   flex-direction: column;
-  overflow: hidden; /* Prevent scrolling on the main container */
+  overflow: hidden;
 }
 
 .contentWrapper {
   flex: 1;
-  overflow-y: auto; /* Enable vertical scrolling */
+  overflow-y: auto;
   padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.contentWrapper h1 {
+  margin-top: 0rem;
+  margin-bottom: 1.5rem;
+}
+
+.meet-us-header {
+  width: 100%;
+  margin-bottom: 2rem;
+  text-align: center;
 }
