--- a/src/Pages/Recruitment.css
+++ b/src/Pages/Recruitment.css
@@ -69,13 +69,13 @@ body, html {
 .mainTitle {
   font-family: 'Dune Rise', sans-serif;
   background: linear-gradient(
-  45deg,
-  rgba(160, 130, 90, 1) 0%,
-  rgba(139, 104, 57, 1) 25%,
-  rgba(118, 78, 24, 1) 50%,
-  rgba(139, 104, 57, 1) 75%,
-  rgba(160, 130, 90, 1) 100%
-);
+    45deg,
+    rgba(50, 30, 20, 1) 0%,
+    rgba(40, 25, 15, 1) 25%,
+    rgba(30, 20, 10, 1) 50%,
+    rgba(40, 25, 15, 1) 75%,
+    rgba(50, 30, 20, 1) 100%
+  );
   background-size: 200% 200%;
   -webkit-background-clip: text;
   background-clip: text;
@@ -87,14 +87,13 @@ body, html {
 
 @keyframes glowAnimation {
   0% {
-    text-shadow: 0 0 0.33rem rgba(182, 154, 0, 0.7), 0 0 1rem rgba(211, 179, 2, 0.5), 0 0 1rem rgba(161, 137, 0, 0.3);
+    text-shadow: 0 0 0.5rem rgba(20, 10, 0, 0.7), 0 0 1.5rem rgba(50, 30, 0, 0.5), 0 0 2rem rgba(30, 15, 0, 0.3);
   }
   50% {
-    text-shadow: 0 0 1rem rgba(190, 162, 0, 0.9), 0 0 1rem rgba(255, 215, 0, 0.7), 0 0 2rem rgba(255, 215, 0, 0.5);
+    text-shadow: 0 0 1.5rem rgba(30, 15, 0, 0.9), 0 0 2rem rgba(60, 40, 0, 0.7), 0 0 3rem rgba(60, 40, 0, 0.5);
   }
-
-  50% {
-    text-shadow: 0 0 1rem rgba(190, 162, 0, 0.8), 0 0 1rem rgba(255, 215, 0, 0.6), 0 0 2rem rgba(255, 215, 0, 0.4);
+  0% {
+    text-shadow: 0 0 0.5rem rgba(20, 10, 0, 0.7), 0 0 1.5rem rgba(50, 30, 0, 0.5), 0 0 2rem rgba(30, 15, 0, 0.3);
   }
 }
 
@@ -104,6 +103,7 @@ body, html {
   margin-bottom: 2rem;
   opacity: 0;
   animation: fadeIn 2s ease-out forwards;
+  color: rgba(40, 25, 15, 0.8);
 }
 
 @keyframes fadeIn {
@@ -116,6 +116,7 @@ body, html {
     transform: translateY(0);
   }
 }
+
 
 
 .eventSection {
