--- a/src/Pages/Recruitment.css
+++ b/src/Pages/Recruitment.css
@@ -168,20 +168,39 @@ body, html {
   }
 }
 
+
+/*Adjust css for mobile displays as well*/
 @media (max-width: 768px) {
   .mainTitle {
     font-size: 4rem;
+    color: rgba(150, 130, 110, 0.9);
+    animation: glowAnimationMobile 7s ease-in-out;
   }
 
   .subTitle {
     font-size: 1.5rem;
+    color: rgba(150, 130, 110, 0.9);
   }
 
   .eventSection h2 {
     font-size: 2rem;
+    color: rgba(150, 130, 110, 0.9);
   }
 
   .eventSection p {
     font-size: 1rem;
+    color: rgba(150, 130, 110, 0.9);
+  }
+}
+
+@keyframes glowAnimationMobile {
+  0% {
+    text-shadow: 0 0 0.5rem rgba(90, 70, 50, 0.7), 0 0 1.5rem rgba(120, 100, 80, 0.5), 0 0 2rem rgba(100, 80, 60, 0.3);
+  }
+  50% {
+    text-shadow: 0 0 1.5rem rgba(100, 80, 60, 0.9), 0 0 2rem rgba(140, 120, 100, 0.7), 0 0 3rem rgba(140, 120, 100, 0.5);
+  }
+  100% {
+    text-shadow: 0 0 0.5rem rgba(90, 70, 50, 0.7), 0 0 1.5rem rgba(120, 100, 80, 0.5), 0 0 2rem rgba(100, 80, 60, 0.3);
   }
 }
