--- a/src/Pages/CareerLogoScroll.css
+++ b/src/Pages/CareerLogoScroll.css
@@ -4,9 +4,6 @@
     box-sizing: border-box;
   }
   
-  body {
-    background: #f2f2f2;
-  }
   
   @keyframes slide {
     from {
@@ -23,7 +20,7 @@
     width: 70%;
     max-width: 1200px;
     padding: 60px 0;
-    background: white;
+    background: #121212;
     white-space: nowrap;
     position: relative;
     margin: 0 auto;
@@ -40,17 +37,7 @@
     content: "";
     z-index: 2;
   }
-  
-  .logos:before {
-    left: 0;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
-  }
-  
-  .logos:after {
-    right: 0;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
-  }
-  
+    
   .logos:hover .logos-slide {
     animation-play-state: paused;
   }
