snap down button added to careers page and visual updates

--- a/src/Pages/CareerTable.css
+++ b/src/Pages/CareerTable.css
@@ -32,7 +32,7 @@
   }
   
   .tabs .years li:hover {
-    background-color: #f1f1f1; 
+    background-color: #001eff; 
     border-color: #aaa; 
   }
 
