--- a/src/Pages/Careers.css
+++ b/src/Pages/Careers.css
@@ -1,20 +1,3 @@
-.careersmainTitleSection {
-  width: 100%;
-  padding: 50px 20px;
-  background-color: #121212;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.careersmainTitle {
-  font-size: 65px;
-  font-family: 'Greek Font', sans-serif;
-  color: rgb(255, 255, 255);
-  text-align: center;
-  margin: 0;
-}
-
 .careersContainer {
   display: flex;
   flex-direction: column;
@@ -27,6 +10,8 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   overflow-y: auto;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
 }
 
 .careerstitleSection {
@@ -37,10 +22,28 @@
   width: 100%;
   color: white;
   text-align: center;
-  background: rgba(0, 0, 0, 0.6); /* Optional: Adds a dark overlay for better text visibility */
+  background: rgba(0, 0, 0, 0.3); /* Optional: Adds a dark overlay for better text visibility */
   box-sizing: border-box;
+  scroll-snap-align: start;
 }
 
+.careersmainTitleSection {
+  width: 100%;
+  padding: 50px 20px;
+  background-color: #121212;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  scroll-snap-align: start;
+}
+
+.careersmainTitle {
+  font-size: 65px;
+  font-family: 'Greek Font', sans-serif;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  margin: 0;
+}
 
 
 .careersContent {
@@ -48,11 +51,23 @@
   z-index: 2;
 }
 
-.careersTitle {
+.hero-c-title {
   font-family: 'Greek Font', sans-serif;
-  font-size: 72px;
+  user-select: none;
+  font-size: 3.5rem;
   margin: 0;
   letter-spacing: 5px;
+  font-weight: bold;
+  padding: 20px;
+  color: transparent;
+  background: linear-gradient(45deg, #97ffa3, #ff819e, #7bcaff, #ffc0c0);
+  background-size: 300%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  text-shadow: 
+    2px 2px 0px black,
+    4px 4px 0px rgb(211, 211, 252);
+  animation: gradient-animation 15s infinite;
 }
 
 .careers-subtitle1 {
